--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,5 @@ scripts/test.sh
 scripts/setup-community.sh
 quickstart-config/buyer-user-def-new.json
 package-lock.json
+sm/sm-temp/main/default/connectedApps/Salesforce_DX_CRT.connectedApp-meta.xml
+quickstart-config/Salesforce_DX_CRT.connectedApp-meta-template.xml
