--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -38,6 +38,6 @@
     }
   ],
   "namespace": "",
-  "sfdcLoginUrl": "https://login.salesforce.com",
-  "sourceApiVersion": "55.0"
+  "sfdcLoginUrl": "https://na46.test1.pc-rnd.salesforce.com",
+  "sourceApiVersion": "56.0"
 }
