commerce related updates

--- a/.gitignore
+++ b/.gitignore
@@ -92,10 +92,17 @@ sm/sm-b2b-connector/main/default/staticresources/SNA_B2BSmConnector1_sf_default_
 sm/sm-b2b-connector/main/default/staticresources/SiteSamples
 sm/sm-b2b-connector/main/default/staticresources/SNA_B2BSmConnector1_sf_default_cdn_lfnec.resource-meta.xml
 sm/sm-b2b-connector/main/default/staticresources/SiteSamples.resource-meta.xml
-sm/sm-b2b-connector/main/default/namedCredentials
+sm/sm-b2b-connector/main/default/namedCredentials/StripeAdapter_NC.namedCredential-meta.xml
+sm/sm-b2b-connector/main/default/namedCredentials/StripeAdapter.namedCredential-meta.xml
 sm/sm-b2b-connector/main/default/managedTopics
 sm/sm-b2b-connector/main/default/quickActions/Quote.SendEmail.quickAction-meta.xml
-sm/sm-b2b-connector/main/default/flows/Buy_Now_GA.flow-meta.xml
 experience-bundle-package
 experience-bundle-package2
 sm/sm-base/main/default/certs
+manifest
+sm/sm-community-template/main/default/experiences/sm1/config/sm.json
+data/WebStoreCatalogs.json
+data/WebStorePricebooks.json
+data/WebStoreBuyerGroups.json
+data/Productless-Plan-1.json
+data/BuyerGroupPricebooks.json
