Add Mock Tax Policy & Treatment

--- a/.gitignore
+++ b/.gitignore
@@ -112,3 +112,4 @@ data/WebStorePricebooks.json
 data/WebStoreBuyerGroups.json
 data/Productless-Plan-1.json
 data/BuyerGroupPricebooks.json
+data/TaxTreatment.json
