--- a/package.json
+++ b/package.json
@@ -16,30 +16,30 @@
     "precommit": "lint-staged"
   },
   "devDependencies": {
-    "@lwc/compiler": "2.27.0",
-    "@lwc/engine-dom": "2.27.0",
+    "@lwc/compiler": "~2.32.0",
+    "@lwc/engine-dom": "~2.32.0",
     "@lwc/eslint-plugin-lwc": "^1.5.0",
-    "@lwc/jest-preset": "11.5.2",
-    "@lwc/module-resolver": "2.27.0",
-    "@lwc/rollup-plugin": "2.27.0",
-    "@lwc/synthetic-shadow": "2.27.0",
-    "@lwc/wire-service": "2.27.0",
+    "@lwc/jest-preset": "~11.5.3",
+    "@lwc/module-resolver": "~2.32.0",
+    "@lwc/rollup-plugin": "~2.32.0",
+    "@lwc/synthetic-shadow": "~2.32.0",
+    "@lwc/wire-service": "~2.32.0",
     "@prettier/plugin-xml": "^2.2.0",
-    "@salesforce-ux/design-system": "2.19.0",
+    "@salesforce-ux/design-system": "~2.19.0",
     "@salesforce/eslint-config-lwc": "^3.3.3",
     "@salesforce/eslint-plugin-aura": "^2.1.0",
     "@salesforce/eslint-plugin-lightning": "^1.0.0",
     "@salesforce/sfdx-lwc-jest": "^1.1.3",
-    "css-loader": "6.7.1",
-    "eslint": "8.26.0",
-    "eslint-config-prettier": "8.5.0",
-    "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-jest": "27.1.3",
-    "eslint-plugin-prettier": "4.2.1",
-    "husky": "^8.0.1",
-    "lint-staged": "^13.0.3",
-    "prettier": "^2.7.1",
-    "prettier-plugin-apex": "^1.10.0"
+    "css-loader": "~6.7.2",
+    "eslint": "~8.28.0",
+    "eslint-config-prettier": "~8.5.0",
+    "eslint-plugin-import": "~2.26.0",
+    "eslint-plugin-jest": "~27.1.6",
+    "eslint-plugin-prettier": "~4.2.1",
+    "husky": "^8.0.2",
+    "lint-staged": "^13.0.4",
+    "prettier": "^2.8.0",
+    "prettier-plugin-apex": "^1.11.0"
   },
   "engines": {
     "yarn": ">=3.1.0",
