--- a/.gitignore
+++ b/.gitignore
@@ -113,3 +113,5 @@ data/WebStoreBuyerGroups.json
 data/Productless-Plan-1.json
 data/BuyerGroupPricebooks.json
 data/TaxTreatment.json
+b2btest.json
+sm/sm-community-template/main/default/profiles/Customer Community Plus Login for Subscription Management.profile-meta.xml
