--- a/.forceignore
+++ b/.forceignore
@@ -53,6 +53,10 @@ sm/sm-b2b-connector/main/default/lwc/selfRegisterGuestUser
 sm/sm-b2b-connector/main/default/aura/selfRegister
 sm/sm-base/main/default/settings/Communities.settings-meta.xml
 #sm/sm-base/main/default/settings/Commerce.settings-meta.xml
+
+sm/sm-b2b-connector-community-template/main/default/experiences/b2bsm1/routes/newsDetail.json
+sm/sm-b2b-connector-community-template/main/default/experiences/b2bsm1/views/newsDetail.json
+
 # These need to be excluded for master developer edition templates
 #sm/sm-community-template/main/default/experiences/sm1/views/articleDetail.json
 #sm/sm-community-template/main/default/experiences/sm1/routes/articleDetail.json
