--- a/sm/sm-b2b-connector-community-template/main/default/experiences/b2bsm1/config/nativeConfig.json
+++ b/sm/sm-b2b-connector-community-template/main/default/experiences/b2bsm1/config/nativeConfig.json
@@ -1,6 +1,7 @@
 {
   "id" : "8b44f25a-f694-4fa1-bddb-dd38f3ed0626",
   "mobilePublisherAppUpdateConfig" : {
+    "enableAppUpdate" : true,
     "forceAppUpdate" : false,
     "minVersion" : {
       "ios" : {
