--- a/config/project-scratch-def.json
+++ b/config/project-scratch-def.json
@@ -2,26 +2,13 @@
   "orgName": "Salesforce Subscription Management",
   "country": "US",
   "edition": "Enterprise",
-  "features": ["Communities","B2BCommerce","B2BAuraTemplateEnabled","RevSubscriptionManagement","OrderSaveLogicEnabled","MultiCurrency","FinanceLogging","CPQ"],
+  "features": ["Communities","B2BCommerce","B2BAuraTemplateEnabled","RevSubscriptionManagement","OrderSaveLogicEnabled","StateAndCountryPicklist","StreamingAPI","B2CCommerceGMV","FinanceLogging","CPQ","DebugApex"],
   "settings": {
-    "lightningExperienceSettings": {
-      "enableS1DesktopEnabled": true
+    "communitiesSettings": {
+      "enableNetworksEnabled": true
     },
-    "mobileSettings": {
-      "enableS1EncryptedStoragePref2": true
-    },
-    "subscriptionManagementSettings": {
-      "enableSubscriptionManagement": true
-    },
-    "orderSettings":{
-      "enableOrders": true,
-      "enableEnhancedCommerceOrders": true,
-      "enableOrderEvents": true,
-      "enableOptionalPricebook": true,
-      "enableZeroQuantity": true,
-      "enableNegativeQuantity": true
-    },
-    "quoteSettings": {
-      "enableQuote": true    }
+    "currencySettings": {
+      "enableMultiCurrency": true
+    }
   }
 }
