update for rcido

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -42,6 +42,9 @@
     },
     {
       "path": "sm/sm-connected-apps"
+    },
+    {
+      "path": "sm/sm-smartbytes"
     }
   ],
   "namespace": "",
