--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -5,6 +5,9 @@
       "default": true
     },
     {
+      "path": "sm/sm-tax"
+    },
+    {
       "path": "sm/sm-asset-management"
     },
     {
