--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sm-quickstart",
   "private": true,
-  "version": "242.0.0",
+  "version": "244.0.0",
   "description": "Salesforce Subscription Management Quickstart",
   "scripts": {
     "lint": "eslint **/{aura,lwc}/**",
@@ -11,25 +11,25 @@
     "precommit": "lint-staged"
   },
   "devDependencies": {
-    "@lwc/compiler": "~3.1.2",
-    "@lwc/engine-dom": "~3.1.2",
+    "@lwc/compiler": "~3.1.3",
+    "@lwc/engine-dom": "~3.1.3",
     "@lwc/eslint-plugin-lwc": "^1.6.3",
-    "@lwc/module-resolver": "~3.1.2",
-    "@lwc/rollup-plugin": "~3.1.2",
-    "@lwc/synthetic-shadow": "~3.1.2",
-    "@lwc/wire-service": "~3.1.2",
-    "@prettier/plugin-xml": "^3.1.1",
+    "@lwc/module-resolver": "~3.1.3",
+    "@lwc/rollup-plugin": "~3.1.3",
+    "@lwc/synthetic-shadow": "~3.1.3",
+    "@lwc/wire-service": "~3.1.3",
+    "@prettier/plugin-xml": "^3.2.0",
     "@salesforce-ux/design-system": "~2.21.5",
     "@salesforce/eslint-config-lwc": "^3.5.2",
-    "@salesforce/eslint-plugin-aura": "^2.1.0",
+    "@salesforce/eslint-plugin-aura": "^1.4.0",
     "@salesforce/eslint-plugin-lightning": "^1.0.0",
     "css-loader": "~6.8.1",
-    "eslint": "~8.46.0",
+    "eslint": "~8.47.0",
     "eslint-config-prettier": "~9.0.0",
     "eslint-plugin-import": "~2.28.0",
     "eslint-plugin-prettier": "~5.0.0",
     "husky": "^8.0.3",
-    "lint-staged": "^13.2.3",
+    "lint-staged": "^14.0.0",
     "prettier": "^3.0.1",
     "prettier-plugin-apex": "^2.0.1"
   },
@@ -44,5 +44,10 @@
     "**/{aura,lwc}/**": [
       "eslint"
     ]
+  },
+  "dependencies": {
+    "@mdn/browser-compat-data": "^5.3.9",
+    "@types/semver": "^7.5.0",
+    "eslint-plugin-compat": "^3.5.1"
   }
 }
