--- a/package.json
+++ b/package.json
@@ -26,11 +26,11 @@
     "css-loader": "~6.8.1",
     "eslint": "~8.47.0",
     "eslint-config-prettier": "~9.0.0",
-    "eslint-plugin-import": "~2.28.0",
+    "eslint-plugin-import": "~2.28.1",
     "eslint-plugin-prettier": "~5.0.0",
     "husky": "^8.0.3",
-    "lint-staged": "^14.0.0",
-    "prettier": "^3.0.1",
+    "lint-staged": "^14.0.1",
+    "prettier": "^3.0.2",
     "prettier-plugin-apex": "^2.0.1"
   },
   "engines": {
@@ -46,8 +46,9 @@
     ]
   },
   "dependencies": {
-    "@mdn/browser-compat-data": "^5.3.9",
+    "@mdn/browser-compat-data": "^5.3.12",
     "@types/semver": "^7.5.0",
-    "eslint-plugin-compat": "^4.1.4"
+    "eslint-plugin-compat": "^4.1.4",
+    "@types/node": "20.5.4"
   }
 }
