--- a/package.json
+++ b/package.json
@@ -5,29 +5,37 @@
   "description": "Salesforce Subscription Management Quickstart",
   "scripts": {
     "lint": "eslint **/{aura,lwc}/**",
+    "lint:lwc": "eslint force-app/main/default/lwc",
+    "test": "npm run test:unit",
+    "test:unit": "sfdx-lwc-jest",
+    "test:unit:watch": "sfdx-lwc-jest --watch",
+    "test:unit:debug": "sfdx-lwc-jest --debug",
+    "test:unit:coverage": "sfdx-lwc-jest --coverage",
     "prettier": "prettier --write \"**/*.{cls,cmp,component,css,html,js,json,md,page,trigger,xml,yaml,yml}\"",
     "prettier:verify": "prettier --list-different \"**/*.{cls,cmp,component,css,html,js,json,md,page,trigger,xml,yaml,yml}\"",
     "postinstall": "husky install",
     "precommit": "lint-staged"
   },
   "devDependencies": {
-    "@lwc/compiler": "~3.1.3",
-    "@lwc/engine-dom": "~3.1.3",
+    "@babel/core": "^7.22.11",
+    "@babel/eslint-parser": "^7.22.11",
+    "@lwc/compiler": "~3.2.0",
+    "@lwc/engine-dom": "~3.2.0",
     "@lwc/eslint-plugin-lwc": "^1.6.3",
-    "@lwc/module-resolver": "~3.1.3",
-    "@lwc/rollup-plugin": "~3.1.3",
-    "@lwc/synthetic-shadow": "~3.1.3",
-    "@lwc/wire-service": "~3.1.3",
+    "@lwc/module-resolver": "~3.2.0",
+    "@lwc/rollup-plugin": "~3.2.0",
+    "@lwc/synthetic-shadow": "~3.2.0",
+    "@lwc/wire-service": "~3.2.0",
     "@prettier/plugin-xml": "^3.2.0",
     "@salesforce-ux/design-system": "~2.21.5",
     "@salesforce/eslint-config-lwc": "^3.5.2",
-    "@salesforce/eslint-plugin-aura": "^2.1.0",
-    "@salesforce/eslint-plugin-lightning": "^1.0.0",
+    "@salesforce/sfdx-lwc-jest": "^3.0.0",
     "css-loader": "~6.8.1",
-    "eslint": "~8.47.0",
+    "eslint": "~8.48.0",
     "eslint-config-prettier": "~9.0.0",
     "eslint-plugin-import": "~2.28.1",
     "eslint-plugin-prettier": "~5.0.0",
+    "eslint-plugin-jest": "^27.2.3",
     "husky": "^8.0.3",
     "lint-staged": "^14.0.1",
     "prettier": "^3.0.2",
@@ -46,9 +54,8 @@
     ]
   },
   "dependencies": {
-    "@mdn/browser-compat-data": "^5.3.12",
-    "@types/semver": "^7.5.0",
-    "eslint-plugin-compat": "^4.1.4",
-    "@types/node": "20.5.4"
+    "@mdn/browser-compat-data": "^5.3.13",
+    "@types/node": "20.5.6",
+    "@types/semver": "^7.5.0"
   }
 }
